# Tf2Coremodel

./: main.py  pyproject.toml  spy_stock_model.h5  spy_stock_model.keras  spy_stock_model.tflite  spy_stock_model_weights.h5
attached_assets/: Pasted--Required-Libraries-import-numpy-as-np-import-pandas-as-pd-import-tensorflow-as-tf-from-tensorflow--1735879355179.txt
spy_stock_model/: fingerprint.pb  keras_metadata.pb  saved_model.pb
spy_stock_model/variables/: variables.data-00000-of-00001  variables.index
